# libtofcore

./: .gitignore  CMakeLists.txt  Makefile  PLATFORM-WIN.md  README.md  build-win.bat  git-subtree-helper.sh  pyproject.toml  setup.py  vcpkg.json
cmake/: tof_options.cmake
examples/python/: ambient-numpy-example.py
include/tofcore/: CommandTypes.hpp  Measurement_T.hpp  MetaDataTypes.hpp  TofEndian.hpp  crc32.h  device_discovery.hpp  tof_sensor.hpp
src/: TofCommand_IF.hpp  cartesian_transform.cpp  connection.cpp  connection.hpp  klv_decoder.cpp  klv_decoder.hpp  measurement.cpp  py_tofcore.cpp  tof_sensor.cpp  uri.hpp
src/comm_ethernet/: cartesian_transform.cpp  tcp_connection.cpp  tcp_connection.hpp  udp_server.cpp  udp_server.hpp
src/comm_ip/: ip_connection.cpp  ip_connection.hpp  tcp_connection.cpp  tcp_connection.hpp  udp_server.cpp  udp_server.hpp
src/comm_serial/: serial_connection.cpp  serial_connection.hpp
src/comm_usb/: usb_connection.cpp  usb_connection.hpp
src/device_discovery/: device_discovery.cpp  device_discovery.hpp
test/: CMakeLists.txt
test/functional-tests/: CMakeLists.txt
test/functional-tests/get-lens-info/: CMakeLists.txt  get-lens-info.cpp
test/functional-tests/ib-test/: CMakeLists.txt  ib-test.cpp
test/functional-tests/jmp-to-boot/: CMakeLists.txt  jmp-to-boot.cpp
test/functional-tests/prod-cal/: CMakeLists.txt  prod-cal.cpp
test/functional-tests/rapid-changes/: CMakeLists.txt  rapid-changes.cpp
test/functional-tests/sequ-ctrl/: CMakeLists.txt  sequ-ctrl.cpp
test/functional-tests/simple-streamer/: CMakeLists.txt  simple-streamer.cpp
test/functional-tests/tof-discovery/: CMakeLists.txt  tof-discovery.cpp
test/functional-tests/tof-flip/: CMakeLists.txt  tof-flip.cpp
test/functional-tests/tof-ipv4/: CMakeLists.txt  tof-ipv4.cpp
test/functional-tests/tof-lens-rd/: CMakeLists.txt  tof-lens-rd.cpp
test/functional-tests/tof-rw/: CMakeLists.txt  test-reads.sh  tof-rw.cpp
test/functional-tests/tof-stat/: CMakeLists.txt  tof-stat.cpp
test/functional-tests/tof-usb-test/: CMakeLists.txt  tof-usb-test.cpp  tof-usb-test.h
test/gtest/: CMakeLists.txt
test/python/: conftest.py  get-integration-times.py  pytest.ini  rapid-changes.py  show-dcs-amp.py  simple.py  test_functional.py  test_functional_core.py  tof-ipv4.py  tof-location.py  tof-name.py
test/testUriParsing/: CMakeLists.txt  testUriParsing.cpp
tmp/cmake/: ToFCoreConfig.cmake.in
tmp/include/tofcore/: TofEndian.hpp
tmp/src/: crc32.cpp  klv_decoder.hpp  tof_sensor.cpp
tmp/src/device_discovery/: device_discovery.cpp
tmp/test/python/: get-lens-info.py  test_tof_sensor.py  tof-location.py
tmp/wrappers/python/: requirements_dev.txt  (+1 more)
tofcore/: CMakeLists.txt  LICENSE
tofcore/cmake/: ToFCoreConfig.cmake.in
tofcore/examples/python/: ambient-numpy-example.py  distance-numpy-example.py  numpy-example.py
tofcore/include/tofcore/: CommandTypes.hpp  Measurement_T.hpp  MetaDataTypes.hpp  TofEndian.hpp  cartesian_transform.hpp  connection.hpp  device_discovery.hpp  tof_sensor.hpp
tofcore/src/: IteratorIndexIn.cpp  IteratorIndexIn.h  IteratorIndexInLut.cpp  IteratorIndexInLut.h  TofCommand_IF.hpp  cartesian_transform.cpp  connection.cpp  connection.hpp  klv_decoder.cpp  klv_decoder.hpp  measurement.cpp  tof_sensor.cpp
tofcore/src/comm_ip/: ip_connection.cpp  ip_connection.hpp  tcp_connection.cpp  tcp_connection.hpp  udp_server.hpp
tofcore/src/comm_serial/: serial_connection.cpp  serial_connection.hpp
tofcore/src/device_discovery/: device_discovery.cpp  ip_device_discovery.cpp  usb_device_discovery.cpp  video_device_discovery.cpp
tofcore/test/: CMakeLists.txt
tofcore/test/functional-tests/: CMakeLists.txt
tofcore/test/functional-tests/get-lens-info/: CMakeLists.txt  get-lens-info.cpp
tofcore/test/functional-tests/get-unit-vector/: CMakeLists.txt  get-unit-vector.cpp
tofcore/test/functional-tests/ipv4-change-test/: CMakeLists.txt  ipv4-change-test.cpp
tofcore/test/functional-tests/jmp-to-boot/: CMakeLists.txt  jmp-to-boot.cpp
tofcore/test/functional-tests/libdbg_out/: CMakeLists.txt  dbg_out.hpp
tofcore/test/functional-tests/libpo_count/: CMakeLists.txt  po_count.hpp
tofcore/test/functional-tests/log-server/: CMakeLists.txt  IpClient.cpp  IpClient_T.hpp  log-server.cpp
tofcore/test/functional-tests/rapid-changes/: CMakeLists.txt  rapid-changes.cpp
tofcore/test/functional-tests/simple-streamer/: CMakeLists.txt  simple-streamer.cpp
tofcore/test/functional-tests/stream-before-set-vsm/: CMakeLists.txt  stream-before-set-vsm.cpp
tofcore/test/functional-tests/tof-discovery/: CMakeLists.txt  tof-discovery.cpp
tofcore/test/functional-tests/tof-edge/: CMakeLists.txt  tof-edge.cpp
tofcore/test/functional-tests/tof-factory-reset/: CMakeLists.txt  tof-factory-reset.cpp
tofcore/test/functional-tests/tof-flip/: CMakeLists.txt  tof-flip.cpp
tofcore/test/functional-tests/tof-imu/: CMakeLists.txt  tof-imu.cpp
tofcore/test/functional-tests/tof-ipv4/: CMakeLists.txt  tof-ipv4.cpp
tofcore/test/functional-tests/tof-mf-test/: CMakeLists.txt  tof-mf-test.cpp
tofcore/test/functional-tests/tof-stat/: CMakeLists.txt  tof-stat.cpp
tofcore/test/functional-tests/tof-vsm/: CMakeLists.txt  tof-vsm.cpp
tofcore/test/functional-tests/vsm-streamer/: CMakeLists.txt  vsm-streamer.cpp
tofcore/test/python/: binning-after-int-time.py  get-integration-time.py  get-limits.py  imu_tests.py  mojave_setting_latency.py  rapidly_get_imu_data.py  rapidly_set_int_time.py  set-integration-time.py  set-modulation-frequency.py  show-dcs-amp.py  simple.py  stream_before_set_vsm_bug.py  test_functional_core.py  tof-ipv4.py  tof-location.py  tof-name.py  tof-reset.py  vsm-lockup.py
tofcore/test/testStreamingStateCommands/: CMakeLists.txt  mock_connection.hpp  testStreamingStateCommands.cpp
tofcore/test/testUriParsing/: CMakeLists.txt  testUriParsing.cpp
tofcore/wrappers/python/: CMakeLists.txt  py_tofcore.cpp  setup.py
tofcore/wrappers/python/pytofcore/: __init__.py
wrappers/: CMakeLists.txt
wrappers/python/: CMakeLists.txt  py_tofcore.cpp  setup.py
(+1 files in other folders)
